# authentic_th

./: .gitignore  AGENTS.md  BUILD_RUNBOOK.md  PROJECT_STATUS.md  investigate-images.js  package-lock.json  package.json  tailwind.config.js
apps/admin-portal/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
apps/customer-app/: .env  .env.example  App.test.tsx  App.tsx  app.config.js  package.json  (+5 more)
services/api-gateway/: .env  Cargo.toml
services/api-gateway/migrations/: 00000000000000_initial.sql
services/api-gateway/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
services/api-gateway/src/middleware/: auth.rs  mod.rs  tenant.rs
services/api-gateway/src/modules/: mod.rs
services/api-gateway/src/modules/auth/: handlers.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/modules/billing/: handlers.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/modules/compliance/: handlers.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/modules/loyalty/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/modules/orders/: handlers.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/modules/tenants/: handlers.rs  models.rs  routes.rs  services.rs
services/api-gateway/src/types/: mod.rs  roles.rs  status.rs
services/api-gateway/tests/: integration_test.rs
specifications/: BRD_authentic_th.md  PDR_customer_app_requirements.md  PDR_overall_requirements.md  PDR_platform_app_requirements.md  PDR_restaurant_app_requirements.md  SAD_authentic_th.md
(+226 files in other folders)
